# burrito

./: .formatter.exs  .gitignore  .tool-versions  CHANGELOG.md  LICENSE  README.md  _dummy_plugin.zig  build.zig  mix.exs
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: burrito-xcomp-check.yaml
example/: README.md  mix.exs
example/lib/: custom_build_step.ex  example_cli_app.ex
example/test_plugin/: plugin.zig
examples/: BURRITO_SELECTIVE_NIF_SKIP.md  README.md
examples/cli_example/: .gitignore  README.md  mix.exs
examples/only_one/: .gitignore  README.md  mix.exs
examples/phx_app/: .gitignore  README.md  mix.exs
lib/: burrito.ex  otp_fetcher.ex
lib/builder/: builder.ex  context.ex  log.ex  step.ex  target.ex
lib/helpers/: clean.ex  launch_scripts.ex  metadata.ex  nif_sniffer.ex  patch_startup_scripts.ex  precheck.ex  zig_plugin.ex
lib/util/: args.ex  default_erts_resolver.ex  erts_beam_machine_fetcher.ex  erts_resolver.ex  erts_universal_machine_fetcher.ex  erts_url_fetcher.ex  file_cache.ex  util.ex  zig_fetch.ex
src/: archiver.zig  erlang_launcher.zig  install.zig  logger.zig  maintenance.zig  metadata.zig  pass_args_patch_posix.diff  pass_args_patch_win.diff  shutil.zig  win_ansi_fix.h  wrapper.zig
wrapper/: Cargo.toml  build.rs
wrapper/src/: archiver.rs  console.rs  erlang_launcher.rs  errors.rs  main.rs  maintenance.rs  release.rs
wrapper/src/proc_macros/: format_literal_parser.rs  mod.rs  tree_building.rs
wrapper/src/proc_macros/format_literal_parser/: primitive_parsers.rs  template_parser.rs
(+51 files in other folders)
