[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
binrw = "0.11.2"
walkdir = "2"
snap = "1"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
binrw = "0.11.2"
walkdir = "2"
anyhow = "1.0"
thiserror = "1.0"
paris = { version = "1.5.15", features = ["macros", "no_logger"] }
enable-ansi-support = "0.2.1"
dirs = "5.0.1"
snap = "1"