[package]
name = "wrapper"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "wrapper"

[lib]
name = "proc_macros"
path = "src/proc_macros/mod.rs"
proc-macro = true

[[bin]]
name = "wrapper"
path = "src/main.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
binrw = "0.11.2"
walkdir = "2"
snap = "1"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
binrw = "0.11.2"
walkdir = "2"
anyhow = "1.0"
thiserror = "1.0"
paris = { version = "1.5.15" }
enable-ansi-support = "0.2.1"
dirs = "5.0.1"
snap = "1"
nom = { version = "7.1" }
